--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Tesla Solar Roof Calculator</title>
+    <title>Elliott Roofing<br>Tesla Solar Roof Calculator</title>
   </head>
   <body>
     <main class="calc-wrapper">
